2004-02-20  Jason R. Mastaler  <jason@mastaler.com>

	* Defaults.py: Removed BOUNCE_TEXT_* and CONFIRM_ACCEPT_TEXT_* in
	favour of bounce_*.txt and confirm_accept_*.txt	templates.

	New variables: ACTION_MISSING_PENDING,
	ACTION_INVALID_CONFIRMATION,
	CONFIRM_ACCEPT_ALREADY_CONFIRMED_NOTIFY,
	CONFIRM_ACCEPT_ALREADY_RELEASED_NOTIFY
	CONFIRM_ACCEPT_INITIAL_NOTIFY

2004-02-17  Jason R. Mastaler  <jason@mastaler.com>

	* Util.py (wraptext): Utilize the new builtin textwrap module.
	
2004-02-05  Jason R. Mastaler  <jason@mastaler.com>

	* Defaults.py (_path_vars): New dict to hold variables that
	contain a pathname, and therefore should be run through
	os.path.expandusers().
	
2004-02-05  Jason R. Mastaler  <jason@mastaler.com>

	* Defaults.py (MAIL_FOLLOWUP_TO): New variable.

2004-01-30  Jason R. Mastaler  <jason@mastaler.com>

	* FilterParser.py (_FilterFile.__init__): Add 'pipe-headers'.
	(FilterParser.firstmatch): Ditto.

2004-01-17  Jason R. Mastaler  <jason@mastaler.com>

	* Defaults.py (TMDARC): ~/.tmdarc is deprecated.

2004-01-11  Jason R. Mastaler  <jason@mastaler.com>

	* MessageLogger.py (MessageLogger.write): Use Util.make_date().
	
	* Pending.py (Message.getDate): Use Util.make_date().

2004-01-10  Jason R. Mastaler  <jason@mastaler.com>

	* Pending.py (Message.release): Use Util.make_date() for
	X-TMDA-Released.
	
2004-01-09  Jason R. Mastaler  <jason@mastaler.com>

	* Defaults.py (DATED_TIMEOUT): TIMEOUT renamed.

	* Util.py (confirm_append_address): Return the envelope sender
	address immediately if either the Return-Path address or
	X-Primary-Address is not in user@hostname format.

2003-12-10  Tim Legant  <tim@catseye.net>

	* Pending.py (Message.show): Change implementation to catch
	failure to Generate and re-parse the message using HeaderParser.

	(Message.release): Call self.show() instead of Util.msg_as_string().
	(Message.summary): Ditto.

2003-12-09  Jason R. Mastaler  <jason@mastaler.com>
